# fur-cli

./: .gitignore  Cargo.toml  README.md
examples/: README.md  dad_jokes.frs  department_meeting.frs  penguin_verses.frs  quantum_playground.frs
examples/chats/: CINEMATIC_ENTANGLEMENT.md  ENTANGLEMENT_EQS.md  MEEPONOMICON.md  QUANTUM_MANIFESTO.md  QUANTUM_STARTUP_PITCH.md  THE_FINAL_POUND.md
examples/docs/: MONTHLY_SUMMARY_REPORT.md
src/: frs.rs  lib.rs  main.rs  utils.rs
src/commands/: avatar.rs  cat.rs  chat.rs  fork.rs  jot.rs  jump.rs  mod.rs  new.rs  run.rs  save.rs  scribe.rs  status.rs  thread.rs  timeline.rs  tree.rs
src/frs/: ast.rs  avatars.rs  emojis.rs  mod.rs  parser.rs  persist.rs
src/renderer/: list.rs  markdown.rs  mod.rs  pdf.rs  terminal.rs  utils.rs
tests/: avatar.rs  chat.rs  frs_basic.rs  frs_branch.rs  frs_store.rs
