[package]
name = "fur-cli"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Garcia"]
description = "CLI tool for recursive semantic memory versioning and chat thread forking. It's like git, but furrier."
license = "MIT"
repository = "https://github.com/andrewrgarcia/fur-cli"

[[bin]]
name = "fur"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
