[package]
name = "fur-cli"
version = "0.3.2"
edition = "2021"
authors = ["Andrew Garcia"]
description = "FUR — a forkable, unearthable, recursive memory tracker for your local chat logs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/andrewrgarcia/fur-cli"
keywords = ["cli", "notes", "ai", "chat", "versioning"]
categories = ["command-line-utilities"]

[[bin]]
name = "fur"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.9.2"
colored = "3.0.0"